[bugfix] Avoid expensive number construction as identified by static analysis